objects/adapps__OptimizerPlus_Unassigned_Roles_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Role_Name__c</fullName>
        <label>Role Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Unassigned_Roles__c</fullName>
        <label>Unassigned Roles</label>
        <referenceTo>adapps__OptimizerPlus_Unassigned_Roles__c</referenceTo>
        <relationshipLabel>Unassigned Roles Items</relationshipLabel>
        <relationshipName>Unassigned_Roles_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Unassigned Roles Item</label>
    <nameField>
        <label>Unassigned Roles Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Unassigned Roles Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>